Add coordinated version update (fork voting)