@@ -20,6 +20,7 @@ package com.radixdlt.statecomputer;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Maps;
+import com.google.common.hash.HashCode;
 import com.radixdlt.atommodel.validators.state.ValidatorParticle;
 import com.radixdlt.consensus.bft.BFTNode;
 import com.radixdlt.consensus.bft.BFTValidator;
@@ -27,6 +28,8 @@ import com.radixdlt.consensus.bft.BFTValidatorSet;
 import com.radixdlt.crypto.ECPublicKey;
 import com.radixdlt.utils.UInt256;
 
+import java.math.BigDecimal;
+import java.math.BigInteger;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
@@ -37,6 +40,8 @@ import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import static java.util.function.Predicate.not;
 
 /**
  * Wrapper class for registered validators
@@ -52,43 +57,72 @@ public final class StakedValidators {
 
 	private final int minValidators;
 	private final int maxValidators;
+	private final ImmutableMap<HashCode, ImmutableSet<ECPublicKey>> forksVotes;
 
 	private StakedValidators(
 		int minValidators,
 		int maxValidators,
 		Set<ValidatorParticle> validatorParticles,
-		Map<ECPublicKey, UInt256> stake
+		Map<ECPublicKey, UInt256> stake,
+		ImmutableMap<HashCode, ImmutableSet<ECPublicKey>> forksVotes
 	) {
 		this.minValidators = minValidators;
 		this.maxValidators = maxValidators;
 		this.validatorParticles = validatorParticles;
 		this.stake = stake;
+		this.forksVotes = forksVotes;
 	}
 
 	public static StakedValidators create(
 		int minValidators,
 		int maxValidators
 	) {
-		return new StakedValidators(minValidators, maxValidators, Set.of(), Map.of());
+		return new StakedValidators(minValidators, maxValidators, Set.of(), Map.of(), ImmutableMap.of());
 	}
 
 	public StakedValidators add(ValidatorParticle particle) {
-		var set = ImmutableSet.<ValidatorParticle>builder()
+		final var newValidatorParticles = ImmutableSet.<ValidatorParticle>builder()
 			.addAll(validatorParticles)
 			.add(particle)
 			.build();
 
-		return new StakedValidators(minValidators, maxValidators, set, stake);
+		final ImmutableMap<HashCode, ImmutableSet<ECPublicKey>> newForksVotes;
+		if (particle.getForkHashVote().isPresent()) {
+			final var forkVoteHash = particle.getForkHashVote().get();
+			final var existingVotes = this.forksVotes.getOrDefault(forkVoteHash, ImmutableSet.of());
+			final var newForkVotes = ImmutableSet.<ECPublicKey>builder()
+				.addAll(existingVotes)
+				.add(particle.getKey())
+				.build();
+			newForksVotes = ImmutableMap.<HashCode, ImmutableSet<ECPublicKey>>builder()
+				.putAll(this.forksVotes)
+				.put(forkVoteHash, newForkVotes)
+				.build();
+		} else {
+			newForksVotes = this.forksVotes;
+		}
+
+		return new StakedValidators(minValidators, maxValidators, newValidatorParticles, stake, newForksVotes);
 	}
 
 	public StakedValidators remove(ValidatorParticle particle) {
+		final var newForksVotes = this.forksVotes.entrySet().stream()
+			.map(e -> {
+				final var newForkVotes = e.getValue().stream()
+					.filter(not(v -> v.equals(particle.getKey())))
+					.collect(ImmutableSet.toImmutableSet());
+				return Map.entry(e.getKey(), newForkVotes);
+			})
+			.collect(ImmutableMap.toImmutableMap(Map.Entry::getKey, Map.Entry::getValue));
+
 		return new StakedValidators(
 			minValidators,
 			maxValidators,
 			validatorParticles.stream()
 				.filter(e -> !e.equals(particle))
 				.collect(Collectors.toSet()),
-			stake
+			stake,
+			newForksVotes
 		);
 	}
 
@@ -103,7 +137,7 @@ public final class StakedValidators {
 			this.stake.entrySet().stream().filter(e -> !delegatedKey.equals(e.getKey()))
 		).collect(ImmutableMap.toImmutableMap(Map.Entry::getKey, Map.Entry::getValue));
 
-		return new StakedValidators(minValidators, maxValidators, validatorParticles, nextStake);
+		return new StakedValidators(minValidators, maxValidators, validatorParticles, nextStake, forksVotes);
 	}
 
 
@@ -119,7 +153,7 @@ public final class StakedValidators {
 			this.stake.entrySet().stream().filter(e -> !delegatedKey.equals(e.getKey()))
 		).collect(ImmutableMap.toImmutableMap(Map.Entry::getKey, Map.Entry::getValue));
 
-		return new StakedValidators(minValidators, maxValidators, validatorParticles, nextStakedAmounts);
+		return new StakedValidators(minValidators, maxValidators, validatorParticles, nextStakedAmounts, forksVotes);
 	}
 
 	public StakedValidators remove(ECPublicKey delegatedKey, UInt256 amount) {
@@ -139,7 +173,7 @@ public final class StakedValidators {
 			final var nextStakedAmounts = this.stake.entrySet().stream()
 				.filter(e -> !delegatedKey.equals(e.getKey()))
 				.collect(ImmutableMap.toImmutableMap(Map.Entry::getKey, Map.Entry::getValue));
-			return new StakedValidators(minValidators, maxValidators, validatorParticles, nextStakedAmounts);
+			return new StakedValidators(minValidators, maxValidators, validatorParticles, nextStakedAmounts, forksVotes);
 		} else if (comparison < 0) {
 			// reduce stake
 			final var nextAmount = oldAmount.subtract(amount);
@@ -147,7 +181,7 @@ public final class StakedValidators {
 				Stream.of(Maps.immutableEntry(delegatedKey, nextAmount)),
 				this.stake.entrySet().stream().filter(e -> !delegatedKey.equals(e.getKey()))
 			).collect(ImmutableMap.toImmutableMap(Map.Entry::getKey, Map.Entry::getValue));
-			return new StakedValidators(minValidators, maxValidators, validatorParticles, nextStakedAmounts);
+			return new StakedValidators(minValidators, maxValidators, validatorParticles, nextStakedAmounts, forksVotes);
 		} else {
 			throw new IllegalStateException("Removing stake which doesn't exist.");
 		}
@@ -174,6 +208,16 @@ public final class StakedValidators {
 		);
 	}
 
+	public BigDecimal validatorsVotesForFork(HashCode forkHash, BFTValidatorSet validatorSet) {
+		final var votes = this.forksVotes.getOrDefault(forkHash, ImmutableSet.of());
+		final var totalVotePowerForFork = votes.stream()
+			.map(BFTNode::create)
+			.filter(validatorSet::containsNode)
+			.map(validatorSet::getPower)
+			.reduce(UInt256.ZERO, UInt256::add);
+		return new BigDecimal(new BigInteger(1, totalVotePowerForFork.toByteArray()));
+	}
+
 	public <T> List<T> map(BiFunction<ECPublicKey, ValidatorDetails, T> mapper) {
 		return validatorParticles
 			.stream()
@@ -191,7 +235,7 @@ public final class StakedValidators {
 
 	@Override
 	public int hashCode() {
-		return Objects.hash(minValidators, maxValidators, validatorParticles, stake);
+		return Objects.hash(minValidators, maxValidators, validatorParticles, stake, forksVotes);
 	}
 
 	@Override
@@ -199,11 +243,11 @@ public final class StakedValidators {
 		if (!(o instanceof StakedValidators)) {
 			return false;
 		}
-
-		var other = (StakedValidators) o;
+		final var other = (StakedValidators) o;
 		return this.minValidators == other.minValidators
 			&& this.maxValidators == other.maxValidators
 			&& Objects.equals(this.validatorParticles, other.validatorParticles)
-			&& Objects.equals(this.stake, other.stake);
+			&& Objects.equals(this.stake, other.stake)
+			&& Objects.equals(this.forksVotes, other.forksVotes);
 	}
 }
